Fixed logo positioning on small screen and added like count

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -80,7 +80,10 @@
   color: white;
 }
 .logoLink {
-  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 80%;
   position: absolute;
   top: 0;
