--- a/components/Postcard/Postcard.module.css
+++ b/components/Postcard/Postcard.module.css
@@ -3,7 +3,7 @@
   height: 500px;
   display: block;
   margin: auto;
-  margin-bottom: 140px;
+  margin-bottom: 190px;
 }
 .TopRow:first-child {
   display: flex;
@@ -41,4 +41,24 @@
   display: flex;
   flex-direction: row;
   gap: 18px;
+}
+.likeCount {
+  color: #f5f5f5;
+  font-size: 12px;
+  font-weight: bold;
+  height: 0px;
+}
+.postOwner {
+  color: #f5f5f5;
+  font-size: 12px;
+  font-weight: bold;
+}
+.postDescription {
+  display: flex;
+  gap: 5px;
+  height: 0px;
+}
+.postDescriptionText {
+  color: #f5f5f5;
+  font-size: 12px;
 }
